# win-autossh

./: .gitignore  CMakeLists.txt  README.md
res/: version.rc
src/: main.c  main.h  version.h
